--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,8 +92,62 @@ font-weight: 700;
 }
 /* header related style end */
 
+/* main related style start  */
 
+/* products related style start */
+.product-title{
+    color: #3A3A3A;
+font-size: 1.75rem;
+font-style: normal;
+font-weight: 600;
+text-align: center;
+margin-bottom: 30px;
+}
+.product-card-container{
+    width: 80%;
+    margin: 0 auto;
+}
+.card{
+    width: 20.56rem;
+    height: 29rem;
+    padding: 10px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    text-align: left;
 
+}
+.card-img{
+    width: 18.75rem;
+    height: 16rem;
+    border-radius: 5px;
+    display: flex;
+    margin: 0 auto;
+
+}
+.card-title{
+    color: var(--text-gray-900, #18191F);
+    font-size: 1.75rem;
+    font-weight: 500;
+    padding: 7px 0px 6px 10px ;
+    
+}
+.card-price{
+    color: rgba(0, 0, 0, 0.87);
+font-size: 1.5rem;
+font-weight: 400;
+padding-left: 8px;
+}
+.rating{
+    width: 80px;
+}
+.card-desc{
+    color: var(--gray-50, #787885);
+font-size: 0.9rem;
+font-weight: 700;
+letter-spacing: 0.252px;
+padding-left: 10px;
+}
 
 
 
