--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,10 +103,10 @@ font-weight: 600;
 text-align: center;
 margin-bottom: 30px;
 }
-.product-card-container{
-    width: 80%;
+/* .product-card-container{
+    width: 60%;
     margin: 0 auto;
-}
+} */
 .card{
     width: 20.56rem;
     height: 29rem;
@@ -147,6 +147,24 @@ font-size: 0.9rem;
 font-weight: 700;
 letter-spacing: 0.252px;
 padding-left: 10px;
+}
+.product-card-container{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 30px;
+    width: 60%;
+    margin: 0 auto;
+}
+.next-page{
+    position: relative; right: -280%;
+    background-color: transparent;
+    color: #E02C6D;
+    
+}
+.pink-arw{
+    margin-top: 7px;
+    margin-left: 5px;
+
 }
 
 
@@ -224,5 +242,16 @@ padding-left: 10px;
     }
     .header-banner-text-container p{
         text-align: center;
+    }
+    .product-card-container{
+        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+    .next-page{
+        position: relative; right: 0%;
     }
 }
