--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,7 +212,7 @@ font-weight: 700;
 /* footer related styles start */
 .footer-section-container{
     background: #0A0826;
-    max-width: 100%;
+    width: 100%;
     height: 239px;
     text-align: center;
     
@@ -341,5 +341,83 @@ font-weight: 700;
     .gear{
         width: 80%;
         margin: auto;
+    }
+}
+
+/* for tablet screen */
+
+@media screen and (min-width:576px) and (max-width:960px){
+    nav,
+    .sponsors-container
+    {
+        flex-direction: column;
+    } 
+    .featured-section-container{
+        flex-direction: column-reverse;
+        gap: 30px;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .sponsors-container{
+       width: 50%;
+       margin:0, auto;
+       display: grid;
+       grid-template-columns: repeat(4 , 1fr);
+       gap: 20px;
+       
+    }
+    .sponsor{
+        width: 70px;
+        margin-bottom: 10px;
+    }
+  
+    nav >h1{
+        text-align: center;
+        margin-bottom: 8px;
+        margin-top: -50px
+        
+    }
+    .header-banner-container{
+        flex-direction: column-reverse;
+    }
+    .Circle{
+        width: 370px;
+        height: 370px;
+        position: relative; left: 150px; top: -70px;
+    }
+    .camera{
+        width: 310px;
+        height: 310px;
+        position: relative; left: -190px; top:-110px;
+    }
+    .header-banner-text-container{
+        /* margin-top: -450px; */
+        text-align: center;
+    }
+   
+    .header-banner-text-container h1{
+        text-align: center;
+        font-size: 2rem;
+    }
+    .header-banner-text-container p{
+        text-align: center;
+    }
+    .product-card-container{
+        grid-template-columns: repeat(2 , 1fr);
+        /* display: flex;
+        flex-direction: column; */
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+    .next-page{
+        position: relative; right: -20px; bottom: -220px;
+    }
+    .gear{
+        width: 100%;
+        margin: auto;
+    }
+    .featured-text-container h1{
+        margin-top: 20px;
     }
 }
